administration list refresh alignment and icons fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -392,3 +392,7 @@ body .p-datatable .p-datatable-thead>tr>th {
     white-space: nowrap !important;
     text-align: center !important;
 }
+.autorenew{
+    position: absolute !important;
+    right: 5px !important;
+}
